# database-mcp-server

./: .env.example  README.md  main.py  pyproject.toml  server.py
src/: server.py
src/database/: formatter.py  manager.py  mongodb_client.py  mysql_client.py  postgres_client.py
src/lib/: config.py  utils.py
